--- a/marketing/index.html
+++ b/marketing/index.html
@@ -15,7 +15,7 @@
         body {
             background: var(--bg);
             color: var(--text);
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", sans-serif;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -31,77 +31,88 @@
         }
 
         .badge {
-            font-size: 12px;
+            font-size: 11px;
             font-weight: 700;
-            letter-spacing: 2px;
+            letter-spacing: 3px;
             text-transform: uppercase;
-            color: #86868b;
-            margin-bottom: 20px;
+            color: #0071e3;
+            margin-bottom: 24px;
             display: block;
         }
 
         h1 {
             font-size: 4.5rem;
-            letter-spacing: -0.05em;
+            letter-spacing: -0.03em;
             margin: 0;
-            background: linear-gradient(180deg, #fff, #888);
+            background: linear-gradient(180deg, #fff, #999);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
             line-height: 1.1;
+            font-weight: 600;
         }
 
         p.subtitle {
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             color: #86868b;
-            max-width: 600px;
-            margin: 20px auto 40px;
+            max-width: 640px;
+            margin: 24px auto 48px;
             line-height: 1.5;
             font-weight: 400;
         }
 
+        /* The New Button Style */
         .cta-button {
             background: #fff;
             color: #000;
-            padding: 16px 32px;
+            padding: 18px 40px;
             border-radius: 100px;
             text-decoration: none;
-            font-weight: 600;
-            font-size: 18px;
-            transition: transform 0.2s;
+            font-weight: 500;
+            font-size: 17px;
+            transition: all 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
             display: inline-block;
+            border: 1px solid transparent;
         }
 
         .cta-button:hover {
-            transform: scale(1.05);
+            transform: scale(1.02);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
         }
 
         .grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 80px;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 24px;
+            margin-top: 100px;
             text-align: left;
         }
 
         .card {
             background: var(--accent);
             padding: 40px;
-            border-radius: 30px;
+            border-radius: 24px;
             position: relative;
             overflow: hidden;
-            border: 1px solid #333;
+            border: 1px solid #2c2c2e;
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            border-color: #444;
         }
 
         .card h3 {
             margin-top: 0;
-            font-size: 1.5rem;
-            margin-bottom: 10px;
+            font-size: 1.3rem;
+            margin-bottom: 12px;
+            color: #fff;
         }
 
         .card p {
-            font-size: 1.1rem;
-            color: #aaa;
+            font-size: 1.05rem;
+            color: #a1a1a6;
             line-height: 1.6;
             margin: 0;
         }
@@ -112,7 +123,7 @@
             }
 
             .container {
-                padding: 20px;
+                padding: 24px;
             }
         }
     </style>
@@ -120,28 +131,28 @@
 
 <body>
     <div class="container">
-        <span class="badge">Introducing Kin OS</span>
+        <span class="badge">Private Beta</span>
         <h1>Your kin. Your network.<br>Your data.</h1>
-        <p class="subtitle">The private operating system for your family. Chat, photos, and plans, hosted in your living
-            room, not on a cloud.</p>
+        <p class="subtitle">The operating system for your family. Chat, photos, and plans, hosted physically in your
+            home—not on a cloud.</p>
 
-        <a href="mailto:interest@ourkin.app" class="cta-button">Request Early Access</a>
+        <a href="https://tally.so/r/ODDZvA" target="_blank" class="cta-button">Request Early Access</a>
 
         <div class="grid">
             <div class="card">
                 <h3>The Kin Hub.</h3>
-                <p>Powered by Raspberry Pi 5. Always on, silent, and completely yours. No subscription required for
-                    local use.</p>
+                <p>A dedicated privacy appliance. Always on, silent, and completely yours. No subscriptions, no
+                    tracking, no data mining.</p>
             </div>
             <div class="card">
-                <h3>Private by Design.</h3>
-                <p>End-to-end encrypted chat. Unlimited photo backup. Data never leaves your house unless you say so.
-                </p>
+                <h3>Sovereign Cloud.</h3>
+                <p>End-to-end encrypted chat and unlimited photo backup. Your data never leaves your four walls unless
+                    you say so.</p>
             </div>
         </div>
 
-        <div style="margin-top: 100px; color: #444; font-size: 14px;">
-            &copy; 2025 Kin Systems. London.
+        <div style="margin-top: 120px; color: #444; font-size: 13px; letter-spacing: 0.5px;">
+            &copy; 2025 KIN SYSTEMS. LONDON.
         </div>
     </div>
 </body>
