feat: add initial marketing landing page with product details and early access CTA.

--- a/marketing/index.html
+++ b/marketing/index.html
@@ -152,7 +152,7 @@
         </div>
 
         <div style="margin-top: 120px; color: #444; font-size: 13px; letter-spacing: 0.5px;">
-            &copy; 2025 KIN SYSTEMS. LONDON.
+            &copy; 2025 KIN APP. UK.
         </div>
     </div>
 </body>
