feat: Add initial marketing landing page for Memu.

--- a/marketing/index.html
+++ b/marketing/index.html
@@ -162,7 +162,7 @@
         <div class="logo">Memu</div>
         <span class="badge">Private Beta</span>
         <h1>Your family.<br>Your network.<br>Your data.</h1>
-        <p class="tagline">Memu means "we" — because your digital life belongs to us, not them.</p>
+        <p class="tagline">Memu means "we" — because your family's digital life belongs to you, not them.</p>
         <p class="subtitle">The operating system for your family. Chat, photos, and plans, hosted physically in your
             home—not on a cloud.</p>
 
